--- a/notebooks/label_explore.ipynb
+++ b/notebooks/label_explore.ipynb
@@ -112,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "credit_score",
+   "display_name": "forextrader-TteqHYvR-py3.11",
    "language": "python",
    "name": "python3"
   },
